Part1/Case2/k8s/00-namespace.yaml
# 00-namespace.yaml — 對應架構圖的 Namespace: asiayo
apiVersion: v1
kind: Namespace
metadata:
  name: asiayo
  labels:
    name: asiayo
